# rvault-tauri

./: .gitignore  package-lock.json  package.json
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: crypto.rs  error.rs  keystore.rs  main.rs  models.rs  storage.rs
