[package]
name = "rvault"
version = "0.1.0"
description = "A Tauri-based secure password manager"
authors = ["You"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["clipboard-manager", "dialog"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
directories = "5.0"
rand = "0.8"
chacha20poly1305 = "0.10.1"
argon2 = "0.5.3"
base64 = "0.22.1"
zeroize = "1.7.0"
once_cell = "1.19"
log = "0.4"
env_logger = "0.11"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

